--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+body{
+  background-color: rgba(249, 245, 245, 0.333);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  font-size: 2.5rem;
+  text-align: center;
+  margin-top: 4rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  text-align: center;
 }
+button{
+  display: inline-block;
+  padding: 0.5em 1em;
+  margin: auto;
+  font-size: 1.5rem;
+  margin-top: 3rem;
+  cursor: pointer;
+  font-weight: 500;
+  background-color: rgb(160, 201, 237);
+  border-radius: 1rem;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.board-container{
+  margin: 5rem;
+}
+.board-row{
   display: flex;
-  flex-direction: column;
+  justify-content:center;
   align-items: center;
+}
+.square{
+  border: 3px solid gray;
+  height: 6rem;
+  width: 8rem;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
